Nov 2nd, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Added PREEXEC snmptt.conf file option to allow an external 
  program to be run before processing the FORMAT and EXEC lines.
  The output of the external program is stored in the $pn variable
  where n is a number starting from 1.  Multiple PREEXEC lines
  are permitted.  The first PREEXEC stores the result of the
  command in $p1, the second in $p2 etc.  Any ending newlines
  are removed.  The snmptt.ini parameter pre_exec_enable can be used
  to enable / disable it.
- If the debug log file can not be opened, a message is now logged
  to syslog if syslog_system_enable is enabled, and to the 
  Event Log if eventlog_system_enable is enabled.
- Fixed a problem when --format_desc=n was used. It was adding a 
  trailing whitespace for every non existant line in the description.
  Thanks to Carlos Velasco for the fix.
- Added unknown_trap_exec snmptt.ini option.  If defined, the 
  command will be executed for ALL unknown traps.  Passed to the
  command will be all standard and enterprise variables, similar 
  to unknown_trap_log_file but without the newlines.  Thanks to
  Carlos Velasco for the patch.
- Modify output of hash dump to print Event: instead of hash:
- Add dump of duplicate events for --dump option
- Fixed bug with --dump trying to open up syslog, eventlog etc

Oct 9th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Changed PostgreSQL INSERT statements to PREPARE / EXECUTE to 
  prevent issue with trap data being interpreted as placeholders
  in the SQL statement which was causing logging errors.

April 16th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- snmpttconvertmib was not printing 'Processing MIB xxx' if 
  DEFINITIONS::= line didn't contain spaces (similar to 11/19/04).

April 15th, 2005: Alex Burger <alex_b@users.sourceforge.net>
- Added Windows Event Log forwarding documentation to integration section

April 11th, 2005: Alex Burger <alex_b@users.sourceforge.net>