@@ -14,6 +14,7 @@ snmptt_1.0.1.tar.gz:
         docs/snmptt.html
         docs/snmpttconvert.html
         docs/snmpttconvertmib.html
+        docs/faqs.html
 
 -update docs/snmptt.html:
         Last updated date
