@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 #
-# SNMPTTHANDLER v1.0
+# SNMPTTHANDLER v1.1beta1
 #
 # Copyright 2002-2005 Alex Burger
 # alex_b@users.sourceforge.net
@@ -190,7 +190,7 @@ while (defined($line = <>))
 
 sub showversion
 {
-	printf "\nSNMPTTHANDLER v1.0\n";
+	printf "\nSNMPTTHANDLER v1.1beta1\n";
 	printf "(c) 2002-2005 Alex Burger\n\n";
 }
 
